# gds-ideas-chai

./: README.md  chai_testing.ipynb  chartist_venv.ipynb  config.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  testing.ipynb
.github/workflows/: main.yml  publish-package.yml
Notebooks/: chAI_package.ipynb  chAI_package_testing.ipynb  chai_testing.ipynb
aws/: bedrock.py
chAI/: __init__.py  bedrock.py  chAI.py  config.py  constants.py  requests.py
chAI/tools/: default_charts.py  image_analysis_formatter.py
docs/: README.md
docs/reference/: chai.md  config.md  requests.md
examples/: chAI_functionality_examples.ipynb
src/: __init__.py  chAI.py  chartist.py
src/chai/: bedrock.py  chAI.py  config.py  constants.py
src/chai/tools/: image_analysis_formatter.py  save_plotly.py  visualisation_formatter.py
tests/: bedrock_test.py  chai_test.py  config_test.py  test_bedrock.py  test_chai.py  test_config.py
tools/: default_charts.py  image_analysis_formatter.py  outputformatter.py  save_plotly.py  visualisation_formatter.py
